--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,149 @@
+/*font-family: 'Raleway', sans-serif;
+font-family: 'Roboto', sans-serif;*/
+
+/* 
+#E5E5E5 - background
+#2F303A - CTA banner; Footer
+#F5F4FA - Our team
+#FFFFFF - Header
+*/
+
+
+:root{
+    /*Шрифты*/
+    --main-font: "Roboto", sans-serif;
+    --secondary-fond: "Raleway", sans-serif;
+
+    /*Цвет фона*/
+    --header-color: #FFFFFF;
+    --cta-footer-color: #2F303A; 
+    --services-color: #e5e5e5;
+    --team-color: #F5F4FA; 
+
+    /*Цвет шрифтов*/
+    --blue-font: #2196F3;
+    --black-font: #212121;
+    --white-font: #ffffff;
+    --grey-font: #757575;
+
+
+} 
+
+
 body{
-    background-color:  #fff;
-    color: #2a2a2a;
+    font-family: var(--main-font);
+    
 }
+/*Header*/
+.header{
+
+font-weight: 500;
+font-size: 14px;
+line-height: 1.14;
+color:var(--black-font);
+
+}
+
+.menu-item{
+    list-style-type: none;
+    
+}
+.menu-item-link{
+    text-decoration: none;  
+    color: inherit;
+}
+.menu-item-link.active:active{
+    color: var(--blue-font);
+}
+.menu-item-link.active.current{
+    color: var(--blue-font)
+}
+
+
+.header-logo{
+
+font-family: var(--secondary-fond);
+font-weight: 700;
+font-size: 26px;
+line-height: 1.19;
+color: #2196F3;
+text-decoration: none;
+
+}
+.logo-part{
+    color: #212121;
+}
+/*Contacts Header*/
+
+.mail{
+    text-decoration: none;  
+    color: var(--grey-font)
+}
+.mail:hover{
+    color: var(--blue-font);
+}
+
+.phone{
+    text-decoration: none;  
+    color: var(--grey-font)
+}
+
+.contacts-item{
+    list-style-type: none;   
+}
+
+/*CTA Page*/
+
+.cta-page{
+    background-color: var(--cta-footer-color);
+}
+.cta-page-title{
+font-weight: 900;
+font-size: 44px;
+line-height: 1.36;
+letter-spacing: 0.06em;
+text-transform: uppercase;
+color:var(--white-font);
+}
+
+.cta-page-button{
+font-weight: 700;
+font-size: 16px;
+line-height: 1.87;
+display: flex;
+letter-spacing: 0.06em;
+color:var(--white-font);   
+}
+button{
+background: #2196F3;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+border-radius: 4px;
+}
+button:hover{
+    background-color:  #188CE8;
+}
+
+/*Studio*/
+.studio{
+    background-color: var(--services-color);
+}
+ .studio-item-title{
+    
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-transform: uppercase;
+    color:var(--black-font)
+ }
+ .studio-item-descr{
+   
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    color: var(--grey-font);
+ }
+ .studio-list-item{
+    list-s
+    
+/*Services*/
+.
